--- a/plugin.xml
+++ b/plugin.xml
@@ -18,10 +18,12 @@
     </engines>
 
     <!-- android -->
-    <platform name="android">
+    <platform name="android">    	
+        <hook type="before_plugin_install" src="scripts/hook.js"></hook>
+        <hook type="before_plugin_uninstall" src="scripts/hook.js"></hook>
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="IntentPlugin">
-                <param name="android-package" value="com.napolitano.cordova.plugin.intent.IntentPlugin"/>
+                <param name="android-package" value="com.zyf0330.intent.IntentPlugin"/>
             </feature>
         </config-file>
 
@@ -29,8 +31,8 @@
             <clobbers target="IntentPlugin" />
         </js-module>
 
-        <source-file src="src/android/IntentPlugin.java" target-dir="src/com/napolitano/cordova/plugin/intent" />
-
+        <source-file src="src/android/IntentPlugin.java" target-dir="src/com/zyf0330/intent" />
+	
     </platform>
 
 </plugin>
