添加initShare到js，一个通用分享处理器注册函数

--- a/plugin.xml
+++ b/plugin.xml
@@ -29,7 +29,7 @@
         </config-file>
 
         <js-module src="www/android/IntentPlugin.js" name="IntentPlugin">
-            <clobbers target="IntentPlugin" />
+            <clobbers target="window.plugins.intent" />
         </js-module>
 
         <source-file src="src/android/IntentPlugin.java" target-dir="src/com/zyf0330/intent" />
