Make intent adjustments

--- a/plugin.xml
+++ b/plugin.xml
@@ -9,7 +9,7 @@
     <description>Cordova Plugin for Android to access intent</description>
     <license>MIT</license>
 
-    <repo>https://github.com/zyf0330/cordova-plugin-intent.git</repo>
+    <repo>https://github.com/ankitjainOfficial/cordova-plugin-intent.git</repo>
 
     <keywords>cordova,intent,share,send,android</keywords>
 
@@ -24,15 +24,23 @@
         <hook type="before_plugin_uninstall" src="scripts/hook.js"></hook>
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="IntentPlugin">
-                <param name="android-package" value="com.zyf0330.intent.IntentPlugin"/>
+                <param name="android-package" value="com.ankitjainOfficial.intent.IntentPlugin"/>
             </feature>
+        </config-file>
+
+        <config-file target="AndroidManifest.xml" parent="/*/application/activity">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="text/plain" />
+            </intent-filter>
         </config-file>
 
         <js-module src="www/android/IntentPlugin.js" name="IntentPlugin">
             <clobbers target="window.plugins.intent" />
         </js-module>
 
-        <source-file src="src/android/IntentPlugin.java" target-dir="src/com/zyf0330/intent" />
+        <source-file src="src/android/IntentPlugin.java" target-dir="src/com/ankitjainOfficial/intent" />
     
     </platform>
 
